test/should_pass/basic_018.grg
actions basic_018;

rule r {
	pattern {
		x : Node;
		y : Node;
		negative {
			x --> y : Node;
		}
	}
	replace {
		x;
		y;
	}
}

