test/should_fail/reuse_002.grg
rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		.-e->y;
	}
}
